--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,14 @@ repositories {
 
 
 dependencies {
-	implementation("org.webjars:jquery:2.0.3-1")
+
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('org.webjars:jquery:2.0.3-1')
+	implementation('org.webjars:jquery-ui:1.12.1')
+	implementation('org.webjars:font-awesome:5.6.1')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	runtimeOnly('org.postgresql:postgresql')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
