updated gitignore for some itellij plugins

--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,8 @@ obj/
 **/.idea/sqlDataSources.xml
 **/.idea/dynamic.xml
 **/.idea/uiDesigner.xml
+**/.idea/codeStyles/
+**/.idea/dbnavigator.xml
 
 # OS-specific files
 .DS_Store
